Closed
Bug 1107881
Opened 11 years ago
Closed 11 years ago
Incorrect :path header field in HTTP/2 or SPDY proxy
Categories
(Core :: Networking: HTTP, defect)
Tracking
()
RESOLVED
FIXED
mozilla37
People
(Reporter: tatsuhiro.t, Assigned: mcmanus)
Details
(Whiteboard: [spdy])
Attachments
(1 file, 1 obsolete file)
User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.71 Safari/537.36
Steps to reproduce:
1. Setup HTTP/2 or SPDY proxy. nghttpx+squid3 or node-spdyproxy will work.
2. Instruct Firefox to use HTTP/2 or SPDY proxy
3. Access the web site (plain http URL, not encrypted site)
Actual results:
Page correctly displays but in protocol level, :path pseudo header is incorrect.
It includes absolute URI like http://nghttp2.org/api.html
Expected results:
:path should be the path and query parts of the target URI, so when accessing http://nghttp2.org/api.html, :path should be /api.html, rather than full absolute URI.
From HTTP/2 draft-16 spec 8.1.2.3. Request Pseudo-Header Fields:
"""
o The ":path" pseudo-header field includes the path and query parts
of the target URI (the "path-absolute" production from [RFC3986]
and optionally a '?' character followed by the "query" production,
see [RFC3986], Section 3.3 and [RFC3986], Section 3.4). A request
in asterisk form includes the value '*' for the ":path" pseudo-
header field.
"""
Chrome M39 sends correct :path in this case.
| Assignee | ||
Comment 1•11 years ago
|
||
thanks - you're right.
The path is being derived from the h1 proxying rules which use an absolute uri in that situation
| Assignee | ||
Updated•11 years ago
|
Whiteboard: [spdy]
| Assignee | ||
Comment 2•11 years ago
|
||
| Assignee | ||
Comment 3•11 years ago
|
||
Attachment #8535653 -
Flags: review?(hurley)
| Assignee | ||
Comment 4•11 years ago
|
||
/r/1429 - bug 1107881 - h2/spdy :path when proxying shouldn't be abs uri r=hurley
Pull down this commit:
hg pull review -r d1ebc894bc6df75efa4b86bc20575d4afcc20a62
https://reviewboard.mozilla.org/r/1429/#review915
::: netwerk/protocol/http/nsHttpChannel.cpp
(Diff revision 1)
> else {
nit: move the else up by the }
Attachment #8535653 -
Flags: review?(hurley) → review+
| Assignee | ||
Comment 7•11 years ago
|
||
Comment 8•11 years ago
|
||
Assignee: nobody → mcmanus
Status: UNCONFIRMED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
| Assignee | ||
Comment 9•11 years ago
|
||
Attachment #8535653 -
Attachment is obsolete: true
Attachment #8618813 -
Flags: review+
| Assignee | ||
Comment 10•11 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•