bug 1107881 - h2/spdy :path when proxying shouldn't be absolute uri r=hurley